fix: cb syntax with chromastyles (instead of automatic)

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -6,8 +6,7 @@ theme: nostyleplease
 
 markup:
   highlight:
-    codeFences: true
-    noClasses: true
+    noClasses: false
     style: nord
 
 params:
