--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,8 @@ jobs:
       - name: Hugo setup
         uses: peaceiris/actions-hugo@v3
         with:
-          hugo-version: 0.147.9
+          hugo-version: latest
+          extended: true
 
       - name: Hugo build
         run: |
