--- a/.github/workflows/mandala.yml
+++ b/.github/workflows/mandala.yml
@@ -55,7 +55,7 @@ jobs:
             
             # trigger the deployment workflow
             curl -X POST \
-              -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+              -H "Authorization: token ${{ secrets.WORKFLOW_TOKEN }}" \
               -H "Accept: application/vnd.github.v3+json" \
               "https://api.github.com/repos/200ug/golfed.xyz/actions/workflows/deploy.yml/dispatches" \
               -d '{"ref":"master"}'
