--- a/static/manifest.json
+++ b/static/manifest.json
@@ -4,18 +4,20 @@
   "icons": [
     {
       "src": "/images/web-app-manifest-192x192.png",
+      "src": "/web-app-manifest-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
       "src": "/images/web-app-manifest-512x512.png",
+      "src": "/web-app-manifest-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
     }
   ],
-  "theme_color": "#525252",
-  "background_color": "#525252",
+  "theme_color": "#8594d4",
+  "background_color": "#8594d4",
   "display": "standalone"
 }
