feat!: no nostyleplease, custom instead

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -2,23 +2,34 @@ baseURL: https://golfed.xyz
 title: Golfed
 language: en-GB
 
-theme: nostyleplease
-
 markup:
+  goldmark:
+    parser:
+      attribute:
+        block: true
+    extensions:
+      typographer: true
   highlight:
     noClasses: false
-    style: nord
+    style: github-dark
 
-params:
-  theme_config:
-    appearance: dark
-    back_home_text: <<
-    date_format: 2006-01-02
-    isListGroupByDate: false
+outputs:
+  page:
+    - html
+    - rss
 
-  assets:
-    favicon: /images/favicon.ico
-    faviconsvg: /images/favicon.svg
-    favicon96: /images/favicon-96x96.png
-    appleTouchIcon: /images/apple-touch-icon.png
-    manifest: /manifest.json
+build:
+  buildStats:
+    enable: true
+  cachebusters:
+    - source: assets/notwatching/hugo_stats\.json
+      target: css
+    - source: (postcss|tailwind)\.config\.js
+      target: css
+module:
+  mounts:
+    - source: assets
+      target: assets
+    - disableWatch: true
+      source: hugo_stats.json
+      target: assets/notwatching/hugo_stats.json
