--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to Pages
 
 on:
   push:
-    brances: ["master"]
+    branches: ["master"]
   workflow_dispatch:
 
 permissions:
@@ -32,6 +32,14 @@ jobs:
         with:
           hugo-version: latest
           extended: true # necessary for sass support
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "24"
+
+      - name: Install npm dependencies
+        run: npm ci
 
       - name: Setup Pages
         id: pages
